# daniugu

./: .cursorrules  .git-version  .gitignore  .vercelignore  11_stocks_buy_points_20260113_171104.json  11_stocks_buy_points_20260113_172325.json  11_stocks_buy_points_20260113_172408.json  11_stocks_performance_analysis_20260114_162837.json  Cloudflare_DNS配置步骤.md  Cloudflare_Error1000修复指南.md  DNS配置修复_Render到Vercel.md  DNS配置验证结果.md  GitHub_Release创建指南.md  GitHub同时连接Render和Vercel的影响分析.md  GitHub数据包上传指南.md  GitHub数据包优先使用配置指南.md  GitHub缓存数据库问题修复指南.md  Mac浏览器调试指南.md  Procfile  README.md  Render+Cloudflare部署步骤.md  Render+Cloudflare部署验证.md  Render_502错误修复指南.md  Render_Start_Command说明.md  Render中国大陆访问分析.md  Render休眠问题解决方案.md  Render启动配置修复.md  Render启用Cloudflare代理步骤.md  Render域名DNS配置指南.md  Render环境变量配置指南.md  Render登录问题修复指南.md  Render登录问题诊断指南.md  Render部署后续步骤.md  Render部署指南.md  Render项目查找指南.md  VERCEL分批扫描说明.md  VIP功能实现可行性分析.md  VIP功能设计方案.md  VIP升级引导功能说明.md  Vercel_500错误修复.md  (+389 more)
api/: cron.py  index.py  refresh_stock_cache.py  update_data_from_sina.py
backtest_daily_scans_20260105_20260109/: scan_2026-01-05_min0.90_cap100.json  scan_2026-01-06_min0.90_cap100.json  scan_2026-01-07_min0.90_cap100.json  scan_2026-01-08_min0.90_cap100.json  scan_2026-01-09_min0.90_cap100.json  summary.csv
cache/: data_markers.json  data_update_timestamp.json  download_2024_2025_summary.json  stock_list_all.json  stock_list_all.meta.json
cache/daily_kline/: 000001.csv  000002.csv  (+15045 more)
templates/: admin.html  bull_stock_web.html  index.html  login.html  register.html  surge_analysis.html  weekly_kline.html
(+31716 files in other folders)
